making table in html

--- a/hi.html
+++ b/hi.html
@@ -6,8 +6,40 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Hello</h1> 
- <h2>World</h2>
- <h1>Helloooo</h1>  
+    <table border="2" align="center">
+     <ul style="text-align: center;font-size: 3pc;background-color: rgb(179, 111, 21);">ABES Engineering College</ul>   
+<tr style="background-color: rgb(187, 140, 79);">
+<th style="font-size: x-large;">Name:</th>   
+<th style="font-size: larger;">Phone:</th>
+<th style="font-size: larger;">Address:</th>
+</tr>
+<tr style=" background-color: beige;">
+<th style="font-size: x-large;">Shivendra</th>   
+<th style="font-size: larger;">7985311660</th>
+<th style="font-size: larger;">Ghaziabad</th>
+</tr>    
+<tr style="background-color: turquoise;">
+<th style="font-size: x-large;">Ujjwal</th>   
+<th style="font-size: larger;">7979797444</th>
+<th style="font-size: larger;">Sikandrabad</th>
+</tr>
+<tr style="background-color: seagreen;">
+<th style="font-size: x-large;">Yug</th>   
+<th style="font-size: larger;">7978551541</th>
+<th style="font-size: larger;">Laxmi Nagar</th>
+</tr>
+<tr style="background-color: slateblue;">
+<th style="font-size: x-large;">Devesh</th>   
+<th style="font-size: larger;">9898586852</th>
+<th style="font-size: larger;">Noida</th>
+</tr>
+<tr style="background-color: violet;">
+<th style="font-size: x-large;">Ajay</th>   
+<th style="font-size: larger;">7584884854</th>
+<th style="font-size: larger;">Delhi</th>
+</tr>
+
+
+
 </body>
 </html>             
